Implementado turma
