# src/docs/swagger.yaml
@@ -266,13 +266,265 @@
           "Turma"
         ],
         "summary": "Consulta lista de turmas.",
-        "description": "Descrição do metodo",
+        "description": "Rota para consultar a lista de todas as turmas cadastradas.",
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Lista de turmas obtida com sucesso",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "object",
+                "properties": {
+                  "id": {
+                    "type": "number",
+                    "example": 1
+                  },
+                  "nome": {
+                    "type": "string",
+                    "example": "Turma Exemplo"
+                  },
+                  "turno": {
+                    "type": "string",
+                    "example": "Matutino"
+                  }
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
           },
           "500": {
-            "description": "Erro Interno do Servidor"
+            "description": "Erro no servidor"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Turma"
+        ],
+        "summary": "Insere uma nova turma.",
+        "description": "Rota para inserir uma nova turma no sistema.",
+        "parameters": [
+          {
+            "name": "json",
+            "description": "Dados para inserir uma nova turma",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "nome": {
+                  "type": "string",
+                  "example": "Turma Exemplo"
+                },
+                "turno": {
+                  "type": "string",
+                  "example": "Matutino"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Turma criada com sucesso",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "id": {
+                  "type": "number",
+                  "example": 1
+                },
+                "nome": {
+                  "type": "string",
+                  "example": "Turma Exemplo"
+                },
+                "turno": {
+                  "type": "string",
+                  "example": "Matutino"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "409": {
+            "description": "Nome da turma já existe"
+          },
+          "500": {
+            "description": "Erro no servidor"
+          }
+        }
+      }
+    },
+    "/turma/{idturma}": {
+      "delete": {
+        "tags": [
+          "Turma"
+        ],
+        "summary": "Remove uma turma.",
+        "description": "Rota para remover uma turma do sistema pelo ID.",
+        "parameters": [
+          {
+            "name": "idturma",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "description": "ID da turma",
+            "example": 1
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Nenhum conteúdo (Turma removida com sucesso)"
+          },
+          "404": {
+            "description": "Turma não encontrada"
+          },
+          "500": {
+            "description": "Erro no servidor"
+          }
+        }
+      },
+      "patch": {
+        "tags": [
+          "Turma"
+        ],
+        "summary": "Atualiza parcialmente uma turma.",
+        "description": "Rota para atualizar parcialmente uma turma pelo ID.",
+        "parameters": [
+          {
+            "name": "idturma",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "description": "ID da turma",
+            "example": 1
+          },
+          {
+            "name": "json",
+            "description": "Dados para atualizar a turma",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "nome": {
+                  "type": "string",
+                  "example": "Turma Exemplo"
+                },
+                "turno": {
+                  "type": "string",
+                  "example": "Matutino"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Turma atualizada com sucesso",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "id": {
+                  "type": "number",
+                  "example": 1
+                },
+                "nome": {
+                  "type": "string",
+                  "example": "Turma Exemplo"
+                },
+                "turno": {
+                  "type": "string",
+                  "example": "Matutino"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "404": {
+            "description": "Turma não encontrada"
+          },
+          "409": {
+            "description": "Nome da turma já existe"
+          },
+          "500": {
+            "description": "Erro no servidor"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "Turma"
+        ],
+        "summary": "Atualiza todos os dados de uma turma.",
+        "description": "Rota para atualizar todos os dados de uma turma pelo ID.",
+        "parameters": [
+          {
+            "name": "idturma",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "description": "ID da turma",
+            "example": 1
+          },
+          {
+            "name": "json",
+            "description": "Dados para substituir a turma",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "nome": {
+                  "type": "string",
+                  "example": "Turma Exemplo"
+                },
+                "turno": {
+                  "type": "string",
+                  "example": "Matutino"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Turma substituída com sucesso",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "id": {
+                  "type": "number",
+                  "example": 1
+                },
+                "nome": {
+                  "type": "string",
+                  "example": "Turma Exemplo"
+                },
+                "turno": {
+                  "type": "string",
+                  "example": "Matutino"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "404": {
+            "description": "Turma não encontrada"
+          },
+          "409": {
+            "description": "Nome da turma já existe"
+          },
+          "500": {
+            "description": "Erro no servidor"
           }
         }
       }
